Linux ci jobs no use environment variables instead of positional parameters

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,11 +41,17 @@ cppcheck:
 
 build-debug-gcc-cpp11-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh gcc cpp11 debug qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-gcc-cpp11-qt5.15.1-debug/
@@ -58,12 +64,18 @@ build-debug-gcc-cpp11-qt5.15.1:
 
 test-debug-gcc-cpp11-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh gcc cpp11 debug qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-debug-gcc-cpp11-qt5.15.1]
   needs: [build-debug-gcc-cpp11-qt5.15.1]
   artifacts:
@@ -83,11 +95,17 @@ test-debug-gcc-cpp11-qt5.15.1:
 
 build-release-gcc-cpp11-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh gcc cpp11 release qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-gcc-cpp11-qt5.15.1-release/
@@ -100,12 +118,18 @@ build-release-gcc-cpp11-qt5.15.1:
 
 test-release-gcc-cpp11-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh gcc cpp11 release qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-release-gcc-cpp11-qt5.15.1]
   needs: [build-release-gcc-cpp11-qt5.15.1]
   artifacts:
@@ -125,11 +149,17 @@ test-release-gcc-cpp11-qt5.15.1:
 
 build-debug-clang-cpp11-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh clang cpp11 debug qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-clang-cpp11-qt5.15.1-debug/
@@ -142,12 +172,18 @@ build-debug-clang-cpp11-qt5.15.1:
 
 test-debug-clang-cpp11-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh clang cpp11 debug qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-debug-clang-cpp11-qt5.15.1]
   needs: [build-debug-clang-cpp11-qt5.15.1]
   artifacts:
@@ -167,11 +203,17 @@ test-debug-clang-cpp11-qt5.15.1:
 
 build-release-clang-cpp11-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh clang cpp11 release qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-clang-cpp11-qt5.15.1-release/
@@ -184,12 +226,18 @@ build-release-clang-cpp11-qt5.15.1:
 
 test-release-clang-cpp11-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh clang cpp11 release qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp11"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-release-clang-cpp11-qt5.15.1]
   needs: [build-release-clang-cpp11-qt5.15.1]
   artifacts:
@@ -209,11 +257,17 @@ test-release-clang-cpp11-qt5.15.1:
 
 build-debug-gcc-cpp14-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh gcc cpp14 debug qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-gcc-cpp14-qt5.15.1-debug/
@@ -226,12 +280,18 @@ build-debug-gcc-cpp14-qt5.15.1:
 
 test-debug-gcc-cpp14-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh gcc cpp14 debug qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-debug-gcc-cpp14-qt5.15.1]
   needs: [build-debug-gcc-cpp14-qt5.15.1]
   artifacts:
@@ -251,11 +311,17 @@ test-debug-gcc-cpp14-qt5.15.1:
 
 build-release-gcc-cpp14-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh gcc cpp14 release qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-gcc-cpp14-qt5.15.1-release/
@@ -268,12 +334,18 @@ build-release-gcc-cpp14-qt5.15.1:
 
 test-release-gcc-cpp14-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh gcc cpp14 release qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "gcc"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-release-gcc-cpp14-qt5.15.1]
   needs: [build-release-gcc-cpp14-qt5.15.1]
   artifacts:
@@ -293,11 +365,17 @@ test-release-gcc-cpp14-qt5.15.1:
 
 build-debug-clang-cpp14-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh clang cpp14 debug qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-clang-cpp14-qt5.15.1-debug/
@@ -310,12 +388,18 @@ build-debug-clang-cpp14-qt5.15.1:
 
 test-debug-clang-cpp14-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh clang cpp14 debug qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "debug"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-debug-clang-cpp14-qt5.15.1]
   needs: [build-debug-clang-cpp14-qt5.15.1]
   artifacts:
@@ -335,11 +419,17 @@ test-debug-clang-cpp14-qt5.15.1:
 
 build-release-clang-cpp14-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh clang cpp14 release qt5.15.1"
+  script: "CI/ci-linux-build.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   artifacts:
     paths:
     - build-clang-cpp14-qt5.15.1-release/
@@ -352,12 +442,18 @@ build-release-clang-cpp14-qt5.15.1:
 
 test-release-clang-cpp14-qt5.15.1:
   stage: test
-  script: "CI/ci-linux-test.sh clang cpp14 release qt5.15.1"
+  script: "CI/ci-linux-test.sh"
   #image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
     - MultiThreads
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "no"
   dependencies: [build-release-clang-cpp14-qt5.15.1]
   needs: [build-release-clang-cpp14-qt5.15.1]
   artifacts:
@@ -377,11 +473,17 @@ test-release-clang-cpp14-qt5.15.1:
 
 iwyu-release-clang-cpp14-qt5.15.1:
   stage: build
-  script: "CI/ci-linux-build.sh clang cpp14 release qt5.15.1 IWYU"
+  script: "CI/ci-linux-build.sh"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
   tags:
     - Linux
     - stretch
+  variables:
+    COMPILER: "clang"
+    LANGUAGE: "cpp14"
+    BUILD_TYPE: "release"
+    QTVERSION: "qt5.15.1"
+    IWYU: "yes"
   artifacts:
     paths:
     - build-clang-cpp14-release-qt5.15.1-iwyu-Vector-Checks/compile_commands.json
